fixed contact section viewheight, get in touch was cut off

--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -9,10 +9,6 @@
 		overflow-y: hidden;
 	}
 
-	@media screen and (min-width: 1700px) {
-		height: 60vh;
-	}
-
 	.contact-bg {
 		width: 20px;
 		height: 100%;
