--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -6,7 +6,7 @@
 
 	width: 100%;
 	height: 50px;
-	background-color: #212529;
+	background-color: #1c1d1f;
 
 	.socials {
 		display: flex;
@@ -26,6 +26,11 @@
 			.social-icon {
 				color: white;
 				font-size: 22px;
+				transition: ease-in 100ms;
+
+				&:hover {
+					transform: scale(2.1);
+				}
 			}
 		}
 	}
