--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -55,6 +55,7 @@
 
 		@media screen and (max-width: 800px) {
 			margin: 0;
+			margin-top: 250px;
 		}
 
 		.intro-introduction {
@@ -102,7 +103,7 @@
 		}
 
 		.intro-description {
-			@media screen and (max-width: 800px) {
+			@media screen and (max-width: 500px) {
 				display: none;
 			}
 
@@ -194,10 +195,6 @@
 		padding-bottom: 200px;
 	}
 
-	// @media screen and (max-width: 800px) {
-	// 	height: 1px;
-	// }
-
 	.intro-right-background {
 		clip-path: polygon(84% 3%, 0 66%, 100% 100%);
 		height: 580px;
@@ -208,7 +205,6 @@
 		justify-content: center;
 		z-index: -1;
 		position: absolute;
-		right: 150px;
 
 		@media screen and (max-width: 1500px) {
 			display: none;
@@ -222,36 +218,36 @@
 	.intro-picture {
 		height: 500px;
 		width: 500px;
-		position: absolute;
-		right: 80px;
-		bottom: 400px;
 		z-index: 3;
 
-		@media screen and (max-width: 1100px) {
-			height: 500px;
-			width: 500px;
-			// bottom: 200px;
-			// right: 280px;
-			position: relative;
-			z-index: 1000;
-			right: 0;
-			bottom: 0;
-		}
+		// @media screen and (max-width: 1100px) {
+		// 	height: 500px;
+		// 	width: 500px;
+		// 	// bottom: 200px;
+		// 	// right: 280px;
+		// 	position: relative;
+		// 	z-index: 1000;
+		// 	right: 0;
+		// 	bottom: 0;
+		// }
 
 		@media screen and (max-width: 800px) {
+			height: 400px;
+			width: 400px;
+		}
+
+		@media screen and (max-width: 500px) {
 			height: 300px;
 			width: 300px;
 			margin-top: 60px;
-			position: relative;
-			z-index: 1000;
 		}
 
-		@media screen and (min-width: 1500px) {
-			height: 500px;
-			width: 500px;
-			right: 80px;
-			bottom: 400px;
-		}
+		// @media screen and (min-width: 1500px) {
+		// 	height: 500px;
+		// 	width: 500px;
+		// 	right: 80px;
+		// 	bottom: 400px;
+		// }
 	}
 }
 
